+ HotelDao with a simple showcase + TODO list + added a generic insertHotel method to main, to be removed soon. + modified the showcase in Main.java to use the new Dao based method for inserting